k3s/kustomize/bases/downloader/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: downloader
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: downloader
  template:
    metadata:
      labels:
        app: downloader
    spec:
      containers:
        - name: downloader
          image: registry.staging.local.hejsan.xyz/downloader:main
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      imagePullSecrets:
        - name: container-registry-secret
