k3s/kustomize/bases/downloader/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: downloader
  namespace: default
spec:
  selector:
    app: downloader
  ports:
  - name: http
    targetPort: 3000
    port: 80
