k3s/kustomize/bases/downloader/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: downloader
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`downloader.staging.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: downloader
          port: 80
      middlewares:
        - name: default-headers

  tls:
    secretName: local-hejsan-xyz-tls
